# pesde

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  fly.toml
.github/workflows/: release.yaml  test-and-lint.yaml
docs/: .prettierrc  astro.config.mjs  bun.lockb  package.json  tailwind.config.ts
docs/src/: tailwind.css
docs/src/components/: SiteTitle.astro
docs/src/content/docs/: index.mdx  installation.mdx  quickstart.mdx
docs/src/content/docs/guides/: binary-packages.mdx  dependencies.mdx  getting-started.md  overrides.mdx  publishing.mdx  roblox.mdx  self-hosting-registries.mdx  workspaces.mdx
docs/src/content/docs/reference/: cli.mdx  configuration.md  manifest.mdx
docs/src/content/docs/registry/: policies.md
registry/: .env.example  Cargo.toml
registry/src/: auth.rs  error.rs  errors.rs  main.rs  package.rs  search.rs
registry/src/auth/: github.rs  mod.rs  none.rs  rw_token.rs  token.rs
registry/src/endpoints/: mod.rs  package_version.rs  package_versions.rs  packages.rs  publish_version.rs  search.rs
registry/src/storage/: fs.rs  mod.rs  s3.rs
src/: download.rs  git.rs  index.rs  lib.rs  linking_file.rs  lockfile.rs  main.rs  manifest.rs  multithread.rs  names.rs  package_name.rs  patches.rs  project.rs  resolver.rs  scripts.rs  util.rs
src/cli/: api_token.rs  auth.rs  config.rs  files.rs  init.rs  install.rs  mod.rs  patch.rs  patch_commit.rs  publish.rs  repos.rs  root.rs  run.rs  scripts.rs  self_install.rs  version.rs
src/cli/auth/: login.rs  logout.rs  mod.rs  whoami.rs
src/cli/commands/: add.rs  execute.rs  init.rs  install.rs  mod.rs  outdated.rs  patch.rs  patch_commit.rs  publish.rs  run.rs  self_install.rs  self_upgrade.rs  update.rs
src/cli/commands/auth/: login.rs  logout.rs  mod.rs  set_token_override.rs  whoami.rs
src/cli/commands/config/: default_index.rs  mod.rs  scripts_repo.rs
src/cli/config/: default_index.rs  mod.rs  scripts_repo.rs
src/dependencies/: git.rs  mod.rs  registry.rs  resolution.rs  wally.rs
src/linking/: generator.rs  mod.rs
src/manifest/: mod.rs  overrides.rs  target.rs
src/source/: fs.rs  git_index.rs  mod.rs  pesde.rs  refs.rs  specifiers.rs  traits.rs  version_id.rs
src/source/git/: mod.rs  pkg_ref.rs  specifier.rs
src/source/pesde/: mod.rs  pkg_ref.rs  specifier.rs
src/source/wally/: compat_util.rs  manifest.rs  mod.rs  pkg_ref.rs  specifier.rs
src/source/workspace/: mod.rs  pkg_ref.rs  specifier.rs
tests/: prelude.rs  resolver.rs
website/: .prettierrc  bun.lockb  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts
website/patches/: @shikijs%2Frehype@1.22.0.patch  simple-svelte-autocomplete@2.5.2.patch  tar-stream@3.1.7.patch
website/src/: app.css  app.html  autocomplete.d.ts
website/src/lib/: Codeblock.svelte  markdown.ts  registry-api.ts
website/src/lib/components/: Github.svelte  Logo.svelte
website/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  Footer.svelte  Hamburger.svelte  Header.svelte  Hero.svelte  Search.svelte  search-state.svelte.ts
website/src/routes/docs/: +page.svelte  Note.svelte
website/src/routes/policies/: +page.svelte
website/src/routes/search/: +page.svelte  +page.ts
website/static/: site.webmanifest
