[package]
name = "pesde"
version = "0.5.0-dev.0"
edition = "2021"
license = "MIT"
authors = ["daimond113 <contact@daimond113.com>"]
description = "A package manager for Luau"
homepage = "https://pesde.daimond113.com"
repository = "https://github.com/daimond113/pesde"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "CHANGELOG.md"]

[features]
bin = [
    "clap",
    "dirs",
    "pretty_env_logger",
    "reqwest/json",
    "reqwest/multipart",
    "indicatif",
    "indicatif-log-bridge",
    "inquire",
    "toml_edit",
    "colored",
    "anyhow",
    "keyring",
    "open",
    "gix/worktree-mutation",
    "serde_json",
    "winreg"
]
wally-compat = ["zip", "serde_json", "roblox"]
roblox = []
lune = []
luau = []
patches = ["git2"]

[[bin]]
name = "pesde"
path = "src/main.rs"
required-features = ["bin"]

[lints.clippy]
uninlined_format_args = "warn"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
serde_with = "3.9.0"
gix = { version = "0.66.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "revparse-regex", "credentials"] }
semver = { version = "1.0.23", features = ["serde"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "blocking"] }
tar = "0.4.41"
flate2 = "1.0.31"
pathdiff = "0.2.1"
relative-path = { version = "1.9.3", features = ["serde"] }
log = "0.4.22"
thiserror = "1.0.63"
threadpool = "1.8.1"
full_moon = { version = "1.0.0-rc.5", features = ["luau"] }
url = { version = "2.5.2", features = ["serde"] }
# TODO: reevaluate whether to use this
# secrecy = "0.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
tempfile = "3.12.0"

# TODO: remove this when gitoxide adds support for: committing, pushing, adding
git2 = { version = "0.19.0", optional = true }

zip = { version = "2.1.6", optional = true }
serde_json = { version = "1.0.122", optional = true }

anyhow = { version = "1.0.86", optional = true }
open = { version = "5.3.0", optional = true }
keyring = { version = "3.0.5", features = ["crypto-rust", "windows-native", "apple-native", "linux-native"], optional = true }
colored = { version = "2.1.0", optional = true }
toml_edit = { version = "0.22.20", optional = true }
clap = { version = "4.5.13", features = ["derive"], optional = true }
dirs = { version = "5.0.1", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
indicatif = { version = "0.17.8", optional = true }
indicatif-log-bridge = { version = "0.2.2", optional = true }
inquire = { version = "0.7.5", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52.0", optional = true }

[workspace]
resolver = "2"
members = ["registry"]

[profile.dev.package.full_moon]
opt-level = 3
